2008-05-30  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/equalizer/gstiirequalizer.c:
	(gst_iir_equalizer_band_set_property), (gst_iir_equalizer_init),
	(setup_filter), (set_passthrough), (update_coefficients),
	(gst_iir_equalizer_compute_frequencies),
	(gst_iir_equalizer_transform_ip):
	* gst/equalizer/gstiirequalizer.h:
	Update the filter coefficients only when needed in the transform_ip
	function and correctly set the element into passthrough mode if the
	gain of all bands is 0.

2008-05-29  Wim Taymans  <wim.taymans@collabora.co.uk>

	Based on patch by: Sebastian Keller <sebastian-keller at gmx dot de>

	* gst/alpha/gstalpha.c: (gst_alpha_class_init), (gst_alpha_init),
	(gst_alpha_set_property), (gst_alpha_get_property),
	(gst_alpha_chroma_key_ayuv), (gst_alpha_chromakey_row_i420):
	Try to skip pixels or areas that are too dark or too bright for us to do
	meaningfull color detection.
	Added properties to control the sensitivity to light and darkness.
	Added some small cleanups. Fixes #512345.

2008-05-28  Jan Schmidt  <jan.schmidt@sun.com>

	* docs/plugins/.cvsignore:
	* tests/check/elements/.cvsignore:
	Ignore some more generated things

	* tests/check/Makefile.am:
	Ignore OSS elements in the state changes test too.

2008-05-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	Add SMPTE effect elements to docs.

2008-05-28  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* ext/raw1394/gstdv1394src.c:
	  Document whats first shown on the fdo plugin docs page :)

2008-05-28  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/gst-plugins-good-plugins.args: